# source-code-analyzer

./: Cargo.toml  README.md
src/: main.rs
tdir/: test.js  text.txt
